# MusicPlayer2

./: .gitignore  CMakeLists.txt  README.md  clean.sh  main.cpp  rebuild.sh
Music/: Music.cpp  Music.h
MusicPlayer/: MusicPlayer.cpp  MusicPlayer.h  listPanel.cpp  logic.cpp  playPanel.cpp  tool.cpp
bass/: a.cpp  a.out
